@@ -29,6 +29,7 @@ import static io.jenetics.internal.util.Hashes.hash;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Comparator;
+import java.util.List;
 import java.util.Objects;
 import java.util.function.Consumer;
 import java.util.function.ToDoubleFunction;
@@ -95,7 +96,7 @@ public class Histogram<C> implements Consumer<C> {
 
 	@SuppressWarnings("unchecked")
 	private static <C> C[] check(final C... classes) {
-		Arrays.asList(classes).forEach(Objects::requireNonNull);
+		List.of(classes).forEach(Objects::requireNonNull);
 		if (classes.length == 0) {
 			throw new IllegalArgumentException("Given classes array is empty.");
 		}
